corrected some warnings